fetch:update knowledge base

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
-        "LEXI"
+        "addknowledge",
+        "embeded",
+        "formfield",
+        "getstart",
+        "LEXI",
+        "ticekt"
     ]
 }
