fetch:update knowledge base

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
         "addknowledge",
+        "chatbots",
         "embeded",
         "formfield",
         "getstart",
+        "Knowladge",
         "LEXI",
         "ticekt"
     ]
